Re-added missing content weekly nerds Fixed paragraphs, spacing and list-styles for better readability

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
 }
 
 :root {
@@ -39,6 +38,7 @@
     --black: #1f1f1f;
     --white: #ffffff;
     --creme: seashell;
+    --brown: #4F3119;
 
     --dark-creme-border: rgb(203, 184, 171);
     --dark-creme-opacity: rgba(203, 184, 171, 0.339);
@@ -87,6 +87,52 @@
     -1.5px 1.5px 2.5px -0.7px hsl(var(--shadow-colour) / 0.47),
     -3.7px 3.8px 6.2px -1.5px hsl(var(--shadow-colour) / 0.49),
     -8.9px 9px 14.8px -2.2px hsl(var(--shadow-colour) / 0.52);
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+}
+
+ol {
+    padding-left: 1rem;
+}
+
+li {
+    padding-left: 1rem;
+    margin: .5rem 0;
+}
+
+.spacing {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.code-example {
+    background-color: var(--brown);
+    color: var(--white);
+    padding: .7rem .9rem;
+    overflow-x: auto;
+    border-radius: 0.5rem;
+    overflow-y: visible;
+}
+
+code {
+    font-size: .8rem;
+    display: inline-block;
+    background-color: var(--brown);
+    color: var(--white);
+    padding: .3rem .4rem;
+    border-radius: .3rem;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.sub-heading {
+    font-weight: 800;
 }
 
 /* /////////////////////////// */
@@ -174,6 +220,7 @@ nav ul {
     align-items: center;
     width: 100vw;
     padding: 0.8rem 1rem;
+    list-style: none;
 }
 
 nav ul li {
@@ -231,6 +278,9 @@ nav ul li:nth-of-type(2) {
 /* ///////////////// */
 /* 🌶️🌶️🌶️ TITLE 🌶️🌶️🌶️ */
 /* ///////////////// */
+.title-wrapper {
+    list-style: none;
+}
 
 .titleContainer {
     /* 'New' way of positioning with grid(from Sanne) */
@@ -795,10 +845,6 @@ label.item-text {
 
 #ref-2-file {
     background-image: url('../images/folder-ref2.svg');
-}
-
-.reflection {
-    list-style: inside !important;
 }
 
 /* ////////////////// */
